# ci

./: .env  .gitignore  README.md
.github/workflows/: python-test.yml
ALL_flight_handling/: .env.sample  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
ALL_flight_handling/custom_packages/: inf_rabbit_utils-0.1.2-py3-none-any.whl
ALL_flight_handling/src/: ALL_flight_handling.py
ALL_flight_handling/src/utils/: azLogger.py  const.py  rabbitmq_actions.py  redis_actions.py
ALL_flight_handling/test/: test_ALL_flight_handling.py  test_redis.py
beginning/: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
beginning/custom_packages/: azure_operations-0.0.2-py3-none-any.whl
beginning/src/: beginning.py
beginning/src/utils/: azure.py  check_type.py  const.py  rabbitmq_actions.py  redis_actions.py
beginning/test/: test_beginning.py  test_redis.py
