[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "beginning-service"
version = "1.0.0"
description = "Edits the flight message at the beginning of the route track"
readme = { file = "README.md", content-type = "markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

dependencies = ["redis==5.0.4", "python-dotenv==1.0.1"]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "ruff==0.4.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.ruff]
line-length = 120
